Adição do atributo ativo na classe de domínio de local e implementação da API de atualização por ID.
