# src/main/resources/swagger/openapi.yaml
@@ -151,6 +151,50 @@ paths:
               schema:
                 $ref: '#/components/schemas/StandardError'
 
+  /v1/location/{idPlace}:
+    patch:
+      summary: Atualizar informações de um local registrado.
+      operationId: updatePlace
+      tags:
+        - Update
+      parameters:
+        - name: idPlace
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdatePlaceRequest'
+      responses:
+        '200':
+          description: Local atualizado.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlaceResponse'
+        '400':
+          description: Payload da requisição inválido.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardError'
+        '404':
+          description: Local com o ID informado não foi encontrado.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardError'
+        '500':
+          description: Erro inesperado no servidor.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardError'
+
 components:
   schemas:
     PlaceResponse:
@@ -162,7 +206,6 @@ components:
           type: string
         complemento:
           type: string
-          nullable: true
         cep:
           type: string
         rua:
@@ -187,6 +230,8 @@ components:
         avaliacao:
           type: number
           format: double
+        ativo:
+          type: boolean
 
     SearchPlaceResponse:
       type: object
@@ -238,6 +283,17 @@ components:
         - nome
         - numero
         - avaliacao
+
+    UpdatePlaceRequest:
+      type: object
+      properties:
+        avaliacao:
+          type: number
+          format: double
+          minimum: 0
+          maximum: 5
+        ativo:
+          type: boolean
 
     StandardError:
       type: object
